--- a/src/Resources/views/crud/includes/_filters_modal.html.twig
+++ b/src/Resources/views/crud/includes/_filters_modal.html.twig
@@ -22,18 +22,31 @@
 <script>
     const filterModal = document.querySelector('#modal-filters');
 
+    const submitForm = function(form) {
+        if('function' === typeof form.requestSubmit) {
+            form.requestSubmit();
+        } else {
+            const submitEvent = new Event('submit', {cancelable: true});
+            form.dispatchEvent(submitEvent);
+            if(!submitEvent.defaultPrevented) {
+                form.submit()
+            }
+        }
+    }
+
     document.querySelector('#modal-clear-button').addEventListener('click', function() {
         filterModal.querySelectorAll('.filter-field').forEach(filterField => {
             filterField.remove();
         });
 
-        filterModal.querySelector('form').submit();
+        submitForm(filterModal.querySelector('form'));
     });
 
     document.querySelector('#modal-apply-button').addEventListener('click', function() {
         filterModal.querySelectorAll('.filter-checkbox:not(:checked)').forEach(notAppliedFilter => {
             notAppliedFilter.closest('.filter-field').remove();
         });
-        filterModal.querySelector('form').submit();
+
+        submitForm(filterModal.querySelector('form'));
     });
 </script>
