--- a/src/Resources/views/crud/includes/_filters_modal.html.twig
+++ b/src/Resources/views/crud/includes/_filters_modal.html.twig
@@ -34,9 +34,16 @@
         }
     }
 
+    const removeFilter = function(field) {
+        field.closest('form').querySelectorAll('input[name^="filters['+field.dataset.filterProperty+']"]').forEach(hidden => {
+            hidden.remove();
+        });
+        field.remove();
+    }
+
     document.querySelector('#modal-clear-button').addEventListener('click', function() {
         filterModal.querySelectorAll('.filter-field').forEach(filterField => {
-            filterField.remove();
+            removeFilter(filterField);
         });
 
         submitForm(filterModal.querySelector('form'));
@@ -44,7 +51,7 @@
 
     document.querySelector('#modal-apply-button').addEventListener('click', function() {
         filterModal.querySelectorAll('.filter-checkbox:not(:checked)').forEach(notAppliedFilter => {
-            notAppliedFilter.closest('.filter-field').remove();
+            removeFilter(notAppliedFilter.closest('.filter-field'));
         });
 
         submitForm(filterModal.querySelector('form'));
