--- a/src/Resources/views/crud/form_theme.html.twig
+++ b/src/Resources/views/crud/form_theme.html.twig
@@ -354,6 +354,7 @@
 
         {% set collapsible = panel_config.collapsible %}
         {% set collapsed = panel_config.collapsed %}
+        {% set actions = panel_config.actions %}
 
         <div class="{{ panel_config.css_class ?? '' }}">
             <div class="content-panel">
@@ -368,6 +369,16 @@
                                 <i class="fa fa-plus-square expand-icon"></i>
                                 <i class="fa fa-minus-square collapse-icon"></i>
                             </a>
+                        {% endif %}
+
+                        {% if actions %}
+                            <div class="d-inline-block float-right">
+                                <div class="page-actions">
+                                {% for action in actions %}
+                                    {{ include(action.templatePath, { action: action }, with_context = false) }}
+                                {% endfor %}
+                                </div>
+                            </div>
                         {% endif %}
 
                         {% if panel_config.help|default(false) %}
