Improve link handling in embed
remove embedContext from all links, set referrer everywhere
this prevents issues when linking to entities, and then to index from there on

--- a/src/Resources/views/crud/field/embed.html.twig
+++ b/src/Resources/views/crud/field/embed.html.twig
@@ -76,9 +76,10 @@
                     // store for later use
                     currentUrl = url;
 
-                    // override referrer of links, so we get back to the "main" view afterwards, not the embed
+                    // modify all links inside table (actions and related entities, but not sort and pagination)
+                    // set referrer to current element, so we get back to the "main" view afterwards, not the embed
                     // strip embedContext from all links, because we do not want to persist that through other views
-                    embedContent.querySelectorAll('a').forEach(link => {
+                    embedContent.querySelectorAll('tbody a').forEach(link => {
                         const target = new URL(link.href)
                         target.searchParams.set('referrer', referrer);
                         Array.from(target.searchParams.keys())
