Add option to modify actions in EmbedField
currently handling the ActionConfigDto directly
because at this point transformation already happened

would be easier if we could just use the Actions object

--- a/src/Resources/views/crud/field/embed.html.twig
+++ b/src/Resources/views/crud/field/embed.html.twig
@@ -9,7 +9,7 @@
 {% set url = ea_url().unset('entityId').setCrudId(crud_id).setAction('index').set('embedContext', {
     mappedBy: field.doctrineMetadata.get('mappedBy'),
     embeddedIn: entity.primaryKeyValue,
-    crud_id: ea.crudControllers.findCrudIdByCrudFqcn(ea.crud.controllerFqcn),
+    controllerFqcn: ea.crud.controllerFqcn,
     fieldName: field.property
 }) %}
 
