Support readonly attr for select2 inputs

--- a/assets/css/easyadmin-theme/select2.scss
+++ b/assets/css/easyadmin-theme/select2.scss
@@ -96,3 +96,17 @@
 .has-error .form-widget .select2-container--bootstrap .select2-selection {
   box-shadow: 0 0 0 1px rgba(43, 45, 80, 0), 0 0 0 1px rgba(183, 6, 32, .2), 0 0 0 2px rgba(183, 6, 32, .25), 0 1px 1px rgba(0, 0, 0, .08);
 }
+
+select[readonly].select2-hidden-accessible + .select2-container {
+  pointer-events: none;
+  touch-action: none;
+
+  .select2-selection {
+    background: #eee;
+    box-shadow: none;
+  }
+
+  .select2-selection__arrow, select[readonly].select2-hidden-accessible + .select2-container .select2-selection__clear {
+    display: none;
+  }
+}
