--- a/src/Resources/views/crud/detail.html.twig
+++ b/src/Resources/views/crud/detail.html.twig
@@ -135,6 +135,7 @@
 
 {% macro render_field(entity, field, row_number) %}
     <div class="data-row {{ row_number is even ? 'with-background' }} {{ field.cssClass }}">
+        {% if not field.hideLabel %}
         <dd>
             {{ field.label|raw }}
 
@@ -145,7 +146,10 @@
             {% endif %}
         </dd>
         <dt>
+        {% endif %}
             {{ include(field.templatePath, { field: field, entity: entity }, with_context = false) }}
+        {% if not field.hideLabel %}
         </dt>
+        {% endif %}
     </div>
 {% endmacro %}
