--- a/src/Resources/views/layout.html.twig
+++ b/src/Resources/views/layout.html.twig
@@ -167,7 +167,7 @@
                                 </section>
                             {% endblock content_header_wrapper %}
 
-                            <section id="main" class="content-body">
+                            <section id="main" class="content-body row">
                                 {% block main %}{% endblock %}
                             </section>
 
